fixed white space on landing when minimizing

--- a/client/styles/cart.less
+++ b/client/styles/cart.less
@@ -99,14 +99,14 @@
 .shopping-list{
     margin-bottom: 15px;
 }
- .item-names{
+.item-names {
+    font-family: 'Bree Serif', serif;
     color: gray;
     padding-left: 0px;
     padding-top: 20px;
-    font-weight: bold;
-    font-size: 24px;
-
-} 
+    /* font-weight: bold; */
+    font-size: 17px;
+}
 .total-price{
     display: inline;
     font-size: x-large;
