--- a/client/styles/home.less
+++ b/client/styles/home.less
@@ -89,12 +89,12 @@
 }
 .landing {
     background-image: url(../../assets/covalence-store-home.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
-    height: 94.4vh;
+    height: 100%;
     width: 100%;
-    margin-top: -53px;
+    margin-top: -50px;
+    position: fixed;
+    top: 100px;
 }
 .btn {
     .btn-lg {
